tests/javacresults/fail_badop_int_pitch.txt
Intermediate.java:1: class, interface, or enum expected
Fatal error: exception Failure("Cannot assign pitch to i of type int")
^
1 error
